Removed GitHubUserValidation bean, code smells